Add support for latest Pack200 Features added with Java 8 #4